TimerRole newInstance -> getDeclaredConstructor().newInstance()